--- a/style.css
+++ b/style.css
@@ -1,44 +1,19 @@
-*{
-    background-color: #dddddd;
+body{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
+    font-size: 1.6rem;
+    line-height: 1.5;
+    text-align: center;
+    color: #333;
+    margin: 0;
 }
 .main{
-    max-width:1200px;
-    max-height:100px;
-    margin:30px auto;
-    padding:15px;
-    background-color: #dddddd;
-    border-radius:5px;
+    margin: 30px 8px;
+    padding: 15px;
+    border-radius: 5px;
+    background: #eee;
 }
-.title{
-    text-align: center;
+h1{
+    font-size: 4rem;
+    margin-bottom: 0;
 }
-.main > p{
-    text-align: center;
-}
-.img-div{
-    max-width:600px;
-    margin:0 auto;
-    padding:15px;
-    background-color:#ffffff;
-}
-#image{
-    display:block;
-    width:100%;
-   
-    padding-bottom:16px;
-}
-#tribute-info{
-    max-width:600px;
-    margin:0 auto;
-    }
-#tribute-info >h2{
-    text-align: center;
-    }
-#tribute-info > ul li{
-    margin-bottom:10px;
-    line-height:16px;
-    }
-h4{
-    text-align:center;
-    
-    }
+
