added style to figure tag

--- a/style.css
+++ b/style.css
@@ -16,4 +16,9 @@ h1{
     font-size: 4rem;
     margin-bottom: 0;
 }
+figure{
+    background-color: white;
+    padding: 10px;
+    margin: 0;
+}
 
