--- a/style.css
+++ b/style.css
@@ -30,14 +30,33 @@ img{
 #img-caption{
     margin: 15px 0 5px 0;
     font-size: 1.2rem;
+    background-color: #333;
+    color: #f4efef;
+    padding-top: 0;
+    padding-bottom: 0;
 }
-h2{
+h3{
     margin: 50px 0;
     text-align: center;
 }
 ul{
     max-width: 550px;
-    margin: 0 auto 50px auto;
+    margin: 0 auto 20px auto;
     text-align: left;
     line-height: 1.6;
+}
+ul li{
+    margin: 16px 0;
+    font-size: 1.2rem;
+    list-style-type: square;
+}
+ul li b{
+    font-size: 1.3rem;
+}
+blockquote{
+    font-style: italic;
+    max-width: 545px;
+    margin: 0 auto 50px auto;
+    text-align: left;
+    font-size: 1.5rem;
 }
