--- a/style.css
+++ b/style.css
@@ -16,12 +16,15 @@ h1{
     font-size: 4rem;
     margin-bottom: 0;
 }
-figure{
-    background-color: white;
+.img-div{
+    background-color: rgb(245, 250, 250);
     padding: 10px;
-    margin: 0;
+    margin-left: 300px;
+    margin-right: 300px; 
+    border: 4px solid rgb(119, 144, 144); 
+    border-radius: 5%;
 }
-img{
+#image{
   width: 70%;
   display: block;
   height: auto;
@@ -29,19 +32,18 @@ img{
 }
 #img-caption{
     margin: 15px 0 5px 0;
-    font-size: 1.2rem;
-    background-color: #333;
-    color: #f4efef;
-    padding-top: 0;
-    padding-bottom: 0;
+    font-size: 1.0rem;
+    font-weight: 600;
+  
 }
 h3{
     margin: 50px 0;
     text-align: center;
+    text-decoration:underline;
 }
 ul{
     max-width: 550px;
-    margin: 0 auto 20px auto;
+    margin: 0 auto 50px auto;
     text-align: left;
     line-height: 1.6;
 }
@@ -59,4 +61,18 @@ blockquote{
     margin: 0 auto 50px auto;
     text-align: left;
     font-size: 1.5rem;
+}
+h4{
+    font-size: 1.42rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+a{
+    font-size: 1.3rem;
+    font-weight: bold;
+    text-decoration: none;
+    margin:auto;
+    color: blue;
+}
+a:hover{
+    color: purple;
 }
